--- a/exam/src/main/resources/templates/users/list-users.html
+++ b/exam/src/main/resources/templates/users/list-users.html
@@ -71,9 +71,8 @@
                     </div>
                 </div>
             </td>
-
-
         </tr>
+        <a href="/my/logout/uri">Logout</a>
         </tbody>
     </table>
 
